# term-particles

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  compile_commands.json
include/: drawlib.h  helperlib.h
src/: drawlib.c  ellipse.c  main.c  physicslib.c  primatives.c  rectangle.c  screen.c
